updated README with instructions